minor refactor: move two non-running tests and try to remove COMPAT to remove warnings on JDK25